fix : PwPopup과 answercontent-check의 z-index 조정

--- a/src/components/common/AnswerContent/AnswerContent.module.scss
+++ b/src/components/common/AnswerContent/AnswerContent.module.scss
@@ -31,6 +31,7 @@
       color: $white;
       border-radius: 99px;
       content: '질문자 채택';
+      z-index: 1;
     }
   }
 
